--- a/params/nav2_params.yaml
+++ b/params/nav2_params.yaml
@@ -148,189 +148,199 @@ bt_navigator_navigate_to_pose_rclcpp_node:  # 导航器到姿势节点配置
 
 
 # MPPI控制器服务器配置
-# controller_server:
-#   ros__parameters:
-#     controller_frequency: 30.0
-#     FollowPath:
-#       plugin: "nav2_mppi_controller::MPPIController"
-#       time_steps: 56
-#       model_dt: 0.05
-#       batch_size: 2000
-#       vx_std: 0.2
-#       vy_std: 0.2
-#       wz_std: 0.4
-#       vx_max: 0.5
-#       vx_min: -0.35
-#       vy_max: 0.5
-#       wz_max: 1.9
-#       iteration_count: 1
-#       prune_distance: 1.7
-#       transform_tolerance: 0.1
-#       temperature: 0.3
-#       gamma: 0.015
-#       motion_model: "DiffDrive"
-#       visualize: false
-#       reset_period: 1.0 # (only in Humble)
-#       regenerate_noises: false
-#       TrajectoryVisualizer:
-#         trajectory_step: 5
-#         time_step: 3
-#       AckermannConstraints:
-#         min_turning_r: 0.2
-#       critics: ["ConstraintCritic", "CostCritic", "GoalCritic", "GoalAngleCritic", "PathAlignCritic", "PathFollowCritic", "PathAngleCritic", "PreferForwardCritic"]
-#       ConstraintCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 4.0
-#       GoalCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 5.0
-#         threshold_to_consider: 1.4
-#       GoalAngleCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 3.0
-#         threshold_to_consider: 0.5
-#       PreferForwardCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 5.0
-#         threshold_to_consider: 0.5
-#       # ObstaclesCritic:
-#       #   enabled: true
-#       #   cost_power: 1
-#       #   repulsion_weight: 1.5
-#       #   critical_weight: 20.0
-#       #   consider_footprint: false
-#       #   collision_cost: 10000.0
-#       #   collision_margin_distance: 0.1
-#       #   near_goal_distance: 0.5
-#       #   inflation_radius: 0.55 # (only in Humble)
-#       #   cost_scaling_factor: 10.0 # (only in Humble)
-#       CostCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 3.81
-#         critical_cost: 300.0
-#         consider_footprint: true
-#         collision_cost: 1000000.0
-#         near_goal_distance: 1.0
-#         trajectory_point_step: 2
-#       PathAlignCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 14.0
-#         max_path_occupancy_ratio: 0.05
-#         trajectory_point_step: 4
-#         threshold_to_consider: 0.5
-#         offset_from_furthest: 20
-#         use_path_orientations: false
-#       PathFollowCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 5.0
-#         offset_from_furthest: 5
-#         threshold_to_consider: 1.4
-#       PathAngleCritic:
-#         enabled: true
-#         cost_power: 1
-#         cost_weight: 2.0
-#         offset_from_furthest: 4
-#         threshold_to_consider: 0.5
-#         max_angle_to_furthest: 1.0
-#         mode: 0
-#       # VelocityDeadbandCritic:
-#       #   enabled: true
-#       #   cost_power: 1
-#       #   cost_weight: 35.0
-#       #   deadband_velocities: [0.05, 0.05, 0.05]
-#       # TwirlingCritic:
-#       #   enabled: true
-#       #   twirling_cost_power: 1
-#       #   twirling_cost_weight: 10.0
+controller_server:
+  ros__parameters:
+    controller_frequency: 60.0  # 控制器频率为每秒30次
+    FollowPath:  # FollowPath插件配置
+      plugin: "nav2_mppi_controller::MPPIController"  # 使用MPPIController插件
+      time_steps: 56  # 时间步数
+      model_dt: 0.02  # 模型时间步长
+      batch_size: 1000  # 批处理大小
+      vx_std: 0.35  # 前向速度标准差
+      vy_std: 0.2  # 侧向速度标准差
+      wz_std: 0.6  # 角速度标准差
+      vx_max: 4.0  # 最大前向速度
+      vx_min: -0.6  # 最小前向速度
+      vy_max: 0.0  # 最大侧向速度
+      wz_max: 0.52  # 最大角速度
+      iteration_count: 1  # 迭代次数
+      prune_distance: 1.7  # 修剪距离
+      transform_tolerance: 0.1  # 变换容差
+      temperature: 0.3  # 温度参数
+      gamma: 0.015  # Gamma值
+      motion_model: "DiffDrive"  # 运动模型为Differential Drive
+      visualize: true  # 是否可视化
+      reset_period: 1.0  # 重置周期（仅在Humble中使用）
+      regenerate_noises: false  # 是否重新生成噪声
+      TrajectoryVisualizer:  # 轨迹可视化器配置
+        trajectory_step: 30  # 轨迹步长
+        time_step: 10  # 时间步长
+      AckermannConstraints:  # Ackermann约束配置
+        min_turning_r: 0.2  # 最小转弯半径
+      critics:  # 所有评价器列表
+        - "ConstraintCritic"  # 约束评价器
+        # - "CostCritic"  # 成本评价器
+        - "GoalCritic"  # 目标评价器
+        - "GoalAngleCritic"  # 目标角度评价器
+        - "PathAlignCritic"  # 路径对齐评价器
+        - "PathFollowCritic"  # 路径跟随评价器
+        - "PathAngleCritic"  # 路径角度评价器
+        - "PreferForwardCritic"  # 偏向前方评价器
+        - "ObstaclesCritic"
+      ConstraintCritic:  # 约束评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 4.0  # 成本权重
+      GoalCritic:  # 目标评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 5.0  # 成本权重
+        threshold_to_consider: 1.4  # 考虑阈值
+      GoalAngleCritic:  # 目标角度评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 3.0  # 成本权重
+        threshold_to_consider: 0.5  # 考虑阈值
+      PreferForwardCritic:  # 偏向前方评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 5.0  # 成本权重
+        threshold_to_consider: 0.5  # 考虑阈值
+      CostCritic:  # 成本评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 3.81  # 成本权重
+        critical_cost: 300.0  # 关键成本
+        consider_footprint: true  # 是否考虑足迹
+        collision_cost: 1000000.0  # 碰撞成本
+        near_goal_distance: 1.0  # 接近目标距离
+        trajectory_point_step: 2  # 轨迹点步长
+      PathAlignCritic:  # 路径对齐评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 14.0  # 成本权重
+        max_path_occupancy_ratio: 0.05  # 最大路径占用比
+        trajectory_point_step: 4  # 轨迹点步长
+        threshold_to_consider: 0.5  # 考虑阈值
+        offset_from_furthest: 20  # 从最远处偏移
+        use_path_orientations: false  # 是否使用路径方向
+      PathFollowCritic:  # 路径跟随评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 5.0  # 成本权重
+        offset_from_furthest: 5  # 从最远处偏移
+        threshold_to_consider: 1.4  # 考虑阈值
+      PathAngleCritic:  # 路径角度评价器配置
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        cost_weight: 2.0  # 成本权重
+        offset_from_furthest: 4  # 从最远处偏移
+        threshold_to_consider: 0.5  # 考虑阈值
+        max_angle_to_furthest: 1.0  # 到最远处的最大角度
+        mode: 0  # 模式
+      ObstaclesCritic:  # 障碍评价器配置（未启用）
+        enabled: true  # 是否启用
+        cost_power: 1  # 成本幂
+        repulsion_weight: 1.5  # 排斥权重
+        critical_weight: 20.0  # 关键权重
+        consider_footprint: false  # 是否考虑足迹
+        collision_cost: 10000.0  # 碰撞成本
+        collision_margin_distance: 0.15  # 碰撞边缘距离
+        near_goal_distance: 0.5  # 接近目标距离
+        # inflation_radius: 0.55  # 膨胀半径（仅在Humble中使用）
+        # cost_scaling_factor: 10.0  # 成本缩放因子（仅在Humble中使用）
+      # VelocityDeadbandCritic:  # 速度死区评价器配置（未启用）
+      #   enabled: true  # 是否启用
+      #   cost_power: 1  # 成本幂
+      #   cost_weight: 35.0  # 成本权重
+      #   deadband_velocities: [0.05, 0.05, 0.05]  # 死区速度数组
+      # TwirlingCritic:  # 旋转评价器配置（未启用）
+      #   enabled: true  # 是否启用
+      #   twirling_cost_power: 1  # 旋转成本幂
+      #   twirling_cost_weight: 10.0  # 旋转成本权重
+
 
 
 # dwb控制器服务器配置
-controller_server:
-  ros__parameters:
-    use_sim_time: True  # 使用仿真时间
-    controller_frequency: 20.0  # 控制器更新频率，每秒20次
-    min_x_velocity_threshold: 0.001  # 最小的x轴速度阈值，用于判断机器人是否基本停止
-    min_y_velocity_threshold: 0.5  # 最小的y轴速度阈值，同上
-    min_theta_velocity_threshold: 0.001  # 最小的旋转速度阈值，同上
-    failure_tolerance: 0.3  # 失败容忍度，可能用于容忍路径跟随中的小偏差
-    progress_checker_plugin: "progress_checker"  # 进度检查插件名称
-    goal_checker_plugins: ["general_goal_checker"]  # 目标检查插件列表
-    controller_plugins: ["FollowPath"]  # 控制器插件列表，此处使用的是FollowPath插件
+# controller_server:
+#   ros__parameters:
+#     use_sim_time: True  # 使用仿真时间
+#     controller_frequency: 20.0  # 控制器更新频率，每秒20次
+#     min_x_velocity_threshold: 0.001  # 最小的x轴速度阈值，用于判断机器人是否基本停止
+#     min_y_velocity_threshold: 0.5  # 最小的y轴速度阈值，同上
+#     min_theta_velocity_threshold: 0.001  # 最小的旋转速度阈值，同上
+#     failure_tolerance: 0.3  # 失败容忍度，可能用于容忍路径跟随中的小偏差
+#     progress_checker_plugin: "progress_checker"  # 进度检查插件名称
+#     goal_checker_plugins: ["general_goal_checker"]  # 目标检查插件列表
+#     controller_plugins: ["FollowPath"]  # 控制器插件列表，此处使用的是FollowPath插件
 
-    # 进度检查器参数
-    progress_checker:
-      plugin: "nav2_controller::SimpleProgressChecker"  # 使用的进度检查插件
-      required_movement_radius: 0.5  # 要求的移动半径，用于检测进度
-      movement_time_allowance: 10.0  # 移动时间容许值，超过这个时间没有进度则可能触发重规划或停止
+#     # 进度检查器参数
+#     progress_checker:
+#       plugin: "nav2_controller::SimpleProgressChecker"  # 使用的进度检查插件
+#       required_movement_radius: 0.5  # 要求的移动半径，用于检测进度
+#       movement_time_allowance: 10.0  # 移动时间容许值，超过这个时间没有进度则可能触发重规划或停止
 
-    # 目标检查器参数
-    #precise_goal_checker:  # 精确目标检查器的配置项
-      # plugin: "nav2_controller::SimpleGoalChecker"  # 使用的插件为SimpleGoalChecker，它是一个基本的目标检查器
-      # xy_goal_tolerance: 0.25  # xy目标容忍度，表示机器人中心与目标位置之间在xy平面上的最大允许距离，单位为米
-      # yaw_goal_tolerance: 0.25  # 姿态（yaw角）目标容忍度，表示机器人当前姿态与目标姿态之间的最大允许差异，单位为弧度
-      # stateful: True  # 是否保持状态。如果为True，目标检查器在连续的检查调用中会保持一些内部状态，以便更精确地判断是否达到目标
+#     # 目标检查器参数
+#     #precise_goal_checker:  # 精确目标检查器的配置项
+#       # plugin: "nav2_controller::SimpleGoalChecker"  # 使用的插件为SimpleGoalChecker，它是一个基本的目标检查器
+#       # xy_goal_tolerance: 0.25  # xy目标容忍度，表示机器人中心与目标位置之间在xy平面上的最大允许距离，单位为米
+#       # yaw_goal_tolerance: 0.25  # 姿态（yaw角）目标容忍度，表示机器人当前姿态与目标姿态之间的最大允许差异，单位为弧度
+#       # stateful: True  # 是否保持状态。如果为True，目标检查器在连续的检查调用中会保持一些内部状态，以便更精确地判断是否达到目标
 
-    # 目标检查器参数
-    general_goal_checker:
-      stateful: True  # 是否保持状态，对于连续检查很有用
-      plugin: "nav2_controller::SimpleGoalChecker"  # 使用的目标检查插件
-      xy_goal_tolerance: 0.5  # 到达目标位置的容许误差范围，单位为米
-      yaw_goal_tolerance: 0.25  # 到达目标旋转角度的容许误差范围，单位为弧度
+#     # 目标检查器参数
+#     general_goal_checker:
+#       stateful: True  # 是否保持状态，对于连续检查很有用
+#       plugin: "nav2_controller::SimpleGoalChecker"  # 使用的目标检查插件
+#       xy_goal_tolerance: 0.5  # 到达目标位置的容许误差范围，单位为米
+#       yaw_goal_tolerance: 0.25  # 到达目标旋转角度的容许误差范围，单位为弧度
 
-    #可以考虑换成TEB DWA
-    # DWB参数
-    FollowPath:
-      plugin: "dwb_core::DWBLocalPlanner"  # 使用DWB作为局部路径规划器的插件
+#     #可以考虑换成TEB DWA
+#     # DWB参数
+#     FollowPath:
+#       plugin: "dwb_core::DWBLocalPlanner"  # 使用DWB作为局部路径规划器的插件
       
-      debug_trajectory_details: True  # 开启调试，以便输出轨迹细节信息
+#       debug_trajectory_details: True  # 开启调试，以便输出轨迹细节信息
 
-      update_frequency: 30.0  
+#       update_frequency: 30.0  
 
-      min_vel_x: 0.0  # 最小x轴速度
-      min_vel_y: 0.0  # 最小y轴速度，对于非全向机器人通常为0
-      max_vel_x: 10.0  # 最大x轴速度
-      max_vel_y: 0.0  # 最大y轴速度，对于非全向机器人通常为0
-      max_vel_theta: 0.52  # 最大角速度
-      min_speed_xy: 0.0  # 最小平移速度
-      max_speed_xy: 10.0  # 最大平移速度
-      min_speed_theta: 0.0  # 最小旋转速度
-      acc_lim_x: 4.0  # x轴加速度限制
-      acc_lim_y: 0.0  # y轴加速度限制，对于非全向机器人通常为0
-      acc_lim_theta: 1.0  # 角加速度限制
-      decel_lim_x: -4.0  # x轴减速度限制
-      decel_lim_y: 0.0  # y轴减速度限制，对于非全向机器人通常为0
-      decel_lim_theta: -1.0  # 角减速度限制
-      vx_samples: 40  # x轴速度采样数
-      vy_samples: 0  # y轴速度采样数，对于非全向机器人可能不适用
-      vtheta_samples: 40  # 角速度采样数
-      sim_time: 4.0  # 轨迹模拟时间
-      linear_granularity: 0.15  # 线性轨迹的粒度
-      angular_granularity: 0.03  # 角轨迹的粒度
-      # occdist_scale: 0.02 躲避障碍物
-      transform_tolerance: 4.0  # 坐标变换容忍度
-      xy_goal_tolerance: 0.5  # 到达目标的xy容忍度
-      trans_stopped_velocity: 0.15  # 低于此速度则认为是停止状态
-      short_circuit_trajectory_evaluation: True  # 若为真，则在找到有效轨迹时停止评估
-      stateful: True  # 若为真，则规划器会记住上一次的状态
-      critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]  # 使用的评价函数列表
-      # 各种评价函数的参数
-      BaseObstacle.scale: 0.02
-      PathAlign.scale: 32.0
-      PathAlign.forward_point_distance: 0.1  # 路径对齐评价的前向点距离
-      GoalAlign.scale: 24.0
-      GoalAlign.forward_point_distance: 0.1  # 目标对齐评价的前向点距离
-      PathDist.scale: 32.0  # 路径距离评价的缩放比例
-      GoalDist.scale: 24.0  # 目标距离评价的缩放比例
-      RotateToGoal.scale: 32.0  # 旋转到目标评价的缩放比例
-      RotateToGoal.slowing_factor: 5.0  # 旋转减速因子
-      RotateToGoal.lookahead_time: -1.0  # 向前看时间，-1表示自动确定
+#       min_vel_x: 0.0  # 最小x轴速度
+#       min_vel_y: 0.0  # 最小y轴速度，对于非全向机器人通常为0
+#       max_vel_x: 10.0  # 最大x轴速度
+#       max_vel_y: 0.0  # 最大y轴速度，对于非全向机器人通常为0
+#       max_vel_theta: 0.52  # 最大角速度
+#       min_speed_xy: 0.0  # 最小平移速度
+#       max_speed_xy: 10.0  # 最大平移速度
+#       min_speed_theta: 0.0  # 最小旋转速度
+#       acc_lim_x: 4.0  # x轴加速度限制
+#       acc_lim_y: 0.0  # y轴加速度限制，对于非全向机器人通常为0
+#       acc_lim_theta: 1.0  # 角加速度限制
+#       decel_lim_x: -4.0  # x轴减速度限制
+#       decel_lim_y: 0.0  # y轴减速度限制，对于非全向机器人通常为0
+#       decel_lim_theta: -1.0  # 角减速度限制
+#       vx_samples: 40  # x轴速度采样数
+#       vy_samples: 0  # y轴速度采样数，对于非全向机器人可能不适用
+#       vtheta_samples: 40  # 角速度采样数
+#       sim_time: 4.0  # 轨迹模拟时间
+#       linear_granularity: 0.15  # 线性轨迹的粒度
+#       angular_granularity: 0.03  # 角轨迹的粒度
+#       # occdist_scale: 0.02 躲避障碍物
+#       transform_tolerance: 4.0  # 坐标变换容忍度
+#       xy_goal_tolerance: 0.5  # 到达目标的xy容忍度
+#       trans_stopped_velocity: 0.15  # 低于此速度则认为是停止状态
+#       short_circuit_trajectory_evaluation: True  # 若为真，则在找到有效轨迹时停止评估
+#       stateful: True  # 若为真，则规划器会记住上一次的状态
+#       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]  # 使用的评价函数列表
+#       # 各种评价函数的参数
+#       BaseObstacle.scale: 0.02
+#       PathAlign.scale: 32.0
+#       PathAlign.forward_point_distance: 0.1  # 路径对齐评价的前向点距离
+#       GoalAlign.scale: 24.0
+#       GoalAlign.forward_point_distance: 0.1  # 目标对齐评价的前向点距离
+#       PathDist.scale: 32.0  # 路径距离评价的缩放比例
+#       GoalDist.scale: 24.0  # 目标距离评价的缩放比例
+#       RotateToGoal.scale: 32.0  # 旋转到目标评价的缩放比例
+#       RotateToGoal.slowing_factor: 5.0  # 旋转减速因子
+#       RotateToGoal.lookahead_time: -1.0  # 向前看时间，-1表示自动确定
 
 local_costmap:  # 局部代价地图的配置开始
   local_costmap:
@@ -351,7 +361,7 @@ local_costmap:  # 局部代价地图的配置开始
       inflation_layer:  # 膨胀层配置
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 1.0  # 成本缩放因子
-        inflation_radius: 0.5  # 膨胀半径，单位为米
+        inflation_radius: 1.0  # 膨胀半径，单位为米
       voxel_layer:  # 体素层配置
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True  # 是否启用
@@ -411,7 +421,7 @@ global_costmap:  # 全局代价地图配置开始
       inflation_layer:  # 膨胀层配置
         plugin: "nav2_costmap_2d::InflationLayer"  # 使用InflationLayer插件
         cost_scaling_factor: 2.5  # 成本缩放因子
-        inflation_radius: 0.5 # 膨胀半径，单位为米
+        inflation_radius: 1.0 # 膨胀半径，单位为米
         # inflate_around_unknown: true
         inflate_unknown: true
       always_send_full_costmap: True  # 是否总是发送完整的代价地图
@@ -500,9 +510,9 @@ velocity_smoother:  # 速度平滑器配置
     scale_velocities: False  # 缩放速度（否）
     feedback: "OPEN_LOOP"  # 反馈类型（开环）
     max_velocity: [10.0, 0.0, 2.0]  # 最大速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
-    min_velocity: [0.0, 0.0, -1.0]  # 最小速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
-    max_accel: [4.0, 0.0, 3.2]  # 最大加速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
-    max_decel: [-4.0, 0.0, -3.2]  # 最大减速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
+    min_velocity: [-0.6, 0.0, -1.0]  # 最小速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
+    max_accel: [1.0, 0.0, 3.2]  # 最大加速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
+    max_decel: [-10.0, 0.0, -3.2]  # 最大减速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
     odom_topic: "odom"  # 里程计话题
     odom_duration: 0.1  # 里程计时长（秒）
     deadband_velocity: [0.0, 0.0, 0.0]  # 死区速度 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
