--- a/params/nav2_params.mppi.yaml
+++ b/params/nav2_params.mppi.yaml
@@ -150,31 +150,31 @@ bt_navigator_navigate_to_pose_rclcpp_node:  # 导航器到姿势节点配置
 # MPPI控制器服务器配置
 controller_server:
   ros__parameters:
-    controller_frequency: 40.0  # 控制器频率为每秒30次
+    controller_frequency: 60.0  # 控制器频率为每秒30次
     FollowPath:  # FollowPath插件配置
       plugin: "nav2_mppi_controller::MPPIController"  # 使用MPPIController插件
-      time_steps: 20  # 时间步数
-      model_dt: 0.03  # 模型时间步长
-      batch_size: 1600  # 批处理大小
-      vx_std: 1.0  # 前向速度标准差
-      vy_std: 0.10  # 侧向速度标准差
-      wz_std: 0.35  # 角速度标准差
-      vx_max: 10.0  # 最大前向速度
-      vx_min: -0.2  # 最小前向速度
-      vy_max: 0.2  # 最大侧向速度
+      time_steps: 56  # 时间步数
+      model_dt: 0.02  # 模型时间步长
+      batch_size: 1000  # 批处理大小
+      vx_std: 0.35  # 前向速度标准差
+      vy_std: 0.2  # 侧向速度标准差
+      wz_std: 0.6  # 角速度标准差
+      vx_max: 4.0  # 最大前向速度
+      vx_min: -0.6  # 最小前向速度
+      vy_max: 0.0  # 最大侧向速度
       wz_max: 0.52  # 最大角速度
       iteration_count: 1  # 迭代次数
-      prune_distance: 5.0  # 修剪距离
+      prune_distance: 1.7  # 修剪距离
       transform_tolerance: 0.1  # 变换容差
       temperature: 0.3  # 温度参数
       gamma: 0.015  # Gamma值
-      motion_model: "Omni"  # 运动模型为Differential Drive
+      motion_model: "DiffDrive"  # 运动模型为Differential Drive
       visualize: true  # 是否可视化
       reset_period: 1.0  # 重置周期（仅在Humble中使用）
       regenerate_noises: false  # 是否重新生成噪声
       TrajectoryVisualizer:  # 轨迹可视化器配置
         trajectory_step: 30  # 轨迹步长
-        time_step: 30  # 时间步长
+        time_step: 10  # 时间步长
       AckermannConstraints:  # Ackermann约束配置
         min_turning_r: 0.2  # 最小转弯半径
       critics:  # 所有评价器列表
@@ -187,7 +187,6 @@ controller_server:
         - "PathAngleCritic"  # 路径角度评价器
         - "PreferForwardCritic"  # 偏向前方评价器
         - "ObstaclesCritic"
-        - "TwirlingCritic"
       ConstraintCritic:  # 约束评价器配置
         enabled: true  # 是否启用
         cost_power: 1  # 成本幂
@@ -217,9 +216,9 @@ controller_server:
         near_goal_distance: 1.0  # 接近目标距离
         trajectory_point_step: 2  # 轨迹点步长
       PathAlignCritic:  # 路径对齐评价器配置
-        cost_weight: 5.0   # 成本权重
         enabled: true  # 是否启用
         cost_power: 1  # 成本幂
+        cost_weight: 14.0  # 成本权重
         max_path_occupancy_ratio: 0.05  # 最大路径占用比
         trajectory_point_step: 4  # 轨迹点步长
         threshold_to_consider: 0.5  # 考虑阈值
@@ -229,7 +228,7 @@ controller_server:
         enabled: true  # 是否启用
         cost_power: 1  # 成本幂
         cost_weight: 5.0  # 成本权重
-        offset_from_furthest: 4  # 从最远处偏移
+        offset_from_furthest: 5  # 从最远处偏移
         threshold_to_consider: 1.4  # 考虑阈值
       PathAngleCritic:  # 路径角度评价器配置
         enabled: true  # 是否启用
@@ -255,10 +254,10 @@ controller_server:
       #   cost_power: 1  # 成本幂
       #   cost_weight: 35.0  # 成本权重
       #   deadband_velocities: [0.05, 0.05, 0.05]  # 死区速度数组
-      TwirlingCritic:  # 旋转评价器配置（未启用）
-        enabled: False  # 是否启用
-        twirling_cost_power: 1  # 旋转成本幂
-        twirling_cost_weight: 3.0  # 旋转成本权重
+      # TwirlingCritic:  # 旋转评价器配置（未启用）
+      #   enabled: true  # 是否启用
+      #   twirling_cost_power: 1  # 旋转成本幂
+      #   twirling_cost_weight: 10.0  # 旋转成本权重
 
 
 
@@ -355,13 +354,13 @@ local_costmap:  # 局部代价地图的配置开始
       width: 10  # 代价地图宽度，单位为米
       height: 10  # 代价地图高度，单位为米
 
-      resolution: 0.2  # 代价地图分辨率，单位为米/像素
+      resolution: 0.05  # 代价地图分辨率，单位为米/像素
 
       robot_radius: 0.5 # 机器人半径，用于计算碰撞
       plugins: ["voxel_layer", "inflation_layer"]  # 使用的插件列表
       inflation_layer:  # 膨胀层配置
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 4.0   # 成本缩放因子
+        cost_scaling_factor: 2.5   # 成本缩放因子
         inflation_radius: 1.0  # 膨胀半径，单位为米
       voxel_layer:  # 体素层配置
         plugin: "nav2_costmap_2d::VoxelLayer"
@@ -379,9 +378,9 @@ local_costmap:  # 局部代价地图的配置开始
           clearing: True  # 是否清除障碍
           marking: True  # 是否标记障碍
           data_type: "LaserScan"  # 数据类型
-          raytrace_max_range: 5.0  # 射线追踪最大范围
+          raytrace_max_range: 10.0  # 射线追踪最大范围
           raytrace_min_range: 0.0  # 射线追踪最小范围
-          obstacle_max_range: 5.0  # 障碍物最大范围
+          obstacle_max_range: 10.0  # 障碍物最大范围
           obstacle_min_range: 0.0  # 障碍物最小范围
       static_layer:  # 静态层配置
         plugin: "nav2_costmap_2d::StaticLayer"
@@ -391,13 +390,13 @@ local_costmap:  # 局部代价地图的配置开始
 global_costmap:  # 全局代价地图配置开始
   global_costmap:
     ros__parameters:
-      update_frequency: 2.0 # 代价地图更新频率，单位为Hz（每秒更新次数）
-      publish_frequency: 2.0  # 代价地图发布频率，单位为Hz
+      update_frequency: 10.0 # 代价地图更新频率，单位为Hz（每秒更新次数）
+      publish_frequency: 10.0  # 代价地图发布频率，单位为Hz
       global_frame: map  # 全局参考框架，通常是地图
       robot_base_frame: base_link  # 机器人基础框架
       use_sim_time: True  # 使用仿真时间（对于仿真环境）
       robot_radius: 0.5  # 机器人半径，用于计算碰撞
-      resolution: 0.2  # 代价地图分辨率，单位为米/像素
+      resolution: 0.05  # 代价地图分辨率，单位为米/像素
       track_unknown_space: true  # 是否追踪未知空间
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]  # 使用的插件列表
       obstacle_layer:  # 障碍物层配置
@@ -421,8 +420,8 @@ global_costmap:  # 全局代价地图配置开始
         inflation_radius: 0.5  # 膨胀半径，单位为米
       inflation_layer:  # 膨胀层配置
         plugin: "nav2_costmap_2d::InflationLayer"  # 使用InflationLayer插件
-        cost_scaling_factor: 2.5  # 成本缩放因子
-        inflation_radius: 2.0 # 膨胀半径，单位为米
+        cost_scaling_factor: 10.0  # 成本缩放因子
+        inflation_radius: 1.0 # 膨胀半径，单位为米
         # inflate_around_unknown: true
         inflate_unknown: true
       always_send_full_costmap: True  # 是否总是发送完整的代价地图
@@ -442,43 +441,16 @@ map_saver:  # 地图保存器配置
     occupied_thresh_default: 0.65  # 默认占用阈值
     map_subscribe_transient_local: True  # 订阅地图瞬态本地
 
-# planner_server:  # 规划器服务器配置
-#   ros__parameters:  # ROS参数
-#     expected_planner_frequency: 1.0  # 预期规划器频率（Hz）
-#     use_sim_time: True  # 使用仿真时间
-#     planner_plugins: ["GridBased"]  # 规划器插件列表（网格型）
-#     GridBased:  # 网格型规划器配置
-#       plugin: "nav2_navfn_planner/NavfnPlanner"  # 插件名称
-#       tolerance: 1.0  # 容差
-#       use_astar: false  # 使用A*算法（否）
-#       allow_unknown: true  # 允许未知区域
-
-planner_server:
-  ros__parameters:
-    expected_planner_frequency: 2.0  # 预期规划器频率（Hz）
-
-    planner_plugins: ["GridBased"]
-    use_sim_time: True
-
-    GridBased:
-      plugin: "nav2_smac_planner/SmacPlanner2D" # In Iron and older versions, "/" was used instead of "::"
-      tolerance: 0.125                      # tolerance for planning if unable to reach exact pose, in meters
-      downsample_costmap: false             # whether or not to downsample the map
-      downsampling_factor: 1                # multiplier for the resolution of the costmap layer (e.g. 2 on a 5cm costmap would be 10cm)
-      allow_unknown: true                   # allow traveling in unknown space
-      max_iterations: 1000000               # maximum total iterations to search for before failing (in case unreachable), set to -1 to disable
-      max_on_approach_iterations: 1000      # maximum number of iterations to attempt to reach goal once in tolerance
-      max_planning_time: 1.0                # max time in s for planner to plan, smooth
-      cost_travel_multiplier: 2.0           # Cost multiplier to apply to search to steer away from high cost areas. Larger values will place in the center of aisles more exactly (if non-`FREE` cost potential field exists) but take slightly longer to compute. To optimize for speed, a value of 1.0 is reasonable. A reasonable tradeoff value is 2.0. A value of 0.0 effective disables steering away from obstacles and acts like a naive binary search A*.
-      use_final_approach_orientation: false # Whether to set the final path pose at the goal's orientation to the requested orientation (false) or in line with the approach angle so the robot doesn't rotate to heading (true)
-      smoother:
-        max_iterations: 1000
-        w_smooth: 0.3
-        w_data: 0.2
-        tolerance: 1.0e-10
-      cost_factor: 0.55
-      neutral_cost: 66
-      lethal_cost: 253
+planner_server:  # 规划器服务器配置
+  ros__parameters:  # ROS参数
+    expected_planner_frequency: 20.0  # 预期规划器频率（Hz）
+    use_sim_time: True  # 使用仿真时间
+    planner_plugins: ["GridBased"]  # 规划器插件列表（网格型）
+    GridBased:  # 网格型规划器配置
+      plugin: "nav2_navfn_planner/NavfnPlanner"  # 插件名称
+      tolerance: 5.0  # 容差
+      use_astar: false  # 使用A*算法（否）
+      allow_unknown: true  # 允许未知区域
 
 
 smoother_server:  # 平滑器服务器配置
@@ -537,10 +509,10 @@ velocity_smoother:  # 速度平滑器配置
     smoothing_frequency: 20.0  # 平滑频率（Hz）
     scale_velocities: False  # 缩放速度（否）
     feedback: "OPEN_LOOP"  # 反馈类型（开环）
-    max_velocity: [10.0, 10.0, 2.0]  # 最大速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
-    min_velocity: [-10.6, -10.0, -1.0]  # 最小速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
-    max_accel: [0.4, 1.0, 3.2]  # 最大加速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
-    max_decel: [-10.2, -10.2, -3.2]  # 最大减速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
+    max_velocity: [10.0, 0.0, 2.0]  # 最大速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
+    min_velocity: [-0.6, 0.0, -1.0]  # 最小速度限制 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
+    max_accel: [1.0, 0.0, 3.2]  # 最大加速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
+    max_decel: [-10.0, 0.0, -3.2]  # 最大减速度 [线加速度(m/s^2), 旋转加速度(rad/s^2), 纵向加速度(m/s^2)]
     odom_topic: "odom"  # 里程计话题
     odom_duration: 0.1  # 里程计时长（秒）
     deadband_velocity: [0.0, 0.0, 0.0]  # 死区速度 [线速度(m/s), 旋转速度(rad/s), 纵向速度(m/s)]
