--- a/params/nav2_params.yaml
+++ b/params/nav2_params.yaml
@@ -1,43 +1,43 @@
-amcl:  # AMCL节点的配置开始
-  ros__parameters:  # ROS 2参数命名空间
-    use_sim_time: True  # 使用仿真时间，对于仿真环境设置为True，实际硬件设置为False
-    alpha1: 0.2  # 旋转运动的噪声参数
-    alpha2: 0.2  # 旋转后的直线运动的噪声参数
-    alpha3: 0.2  # 直线运动的噪声参数
-    alpha4: 0.2  # 直线后的旋转运动的噪声参数
-    alpha5: 0.2  # 传感器噪声参数
-    base_frame_id: "base_footprint"  # 机器人底盘的参考框架ID
-    beam_skip_distance: 0.5  # 在进行激光模型计算时跳过的光束距离
-    beam_skip_error_threshold: 0.9  # 允许的最大光束跳过错误阈值
-    beam_skip_threshold: 0.3  # 光束跳过阈值
-    do_beamskip: True  # 是否执行光束跳过优化
-    global_frame_id: "map"  # 全局参考框架ID
-    lambda_short: 0.1  # 短距离测量的指数衰减速率
-    laser_likelihood_max_dist: 2.0  # 激光似然性计算的最大距离
-    laser_max_range: 40.0  # 激光器的最大测量范围
-    laser_min_range: -1.0  # 激光器的最小测量范围，-1表示忽略
-    laser_model_type: "likelihood_field"  # 使用的激光模型类型
-    max_beams: 60  # 用于每个粒子进行估算的最大光束数
-    max_particles: 2000  # 粒子滤波器中的最大粒子数
-    min_particles: 500  # 粒子滤波器中的最小粒子数
-    odom_frame_id: "odom"  # 里程计的参考框架ID
-    pf_err: 0.15  # 粒子滤波器的误差参数
-    pf_z: 0.99  # 粒子滤波器的测量更新参数
-    recovery_alpha_fast: 0.0  # 快速收敛率
-    recovery_alpha_slow: 0.0  # 慢速收敛率
-    resample_interval: 1  # 重采样间隔，以周期为单位
-    robot_model_type: "nav2_amcl::DifferentialMotionModel"  # 机器人运动模型类型
-    save_pose_rate: 1.0  # 保存姿势的频率，单位为Hz
-    sigma_hit: 0.2  # 测量的标准差
-    tf_broadcast: false  # 是否广播坐标变换
-    transform_tolerance: 2.0  # 坐标变换容忍的延迟，单位为秒
-    update_min_a: 0.1  # 触发更新的最小角度变化
-    update_min_d: 0.25  # 触发更新的最小距离变化
-    z_hit: 0.5  # 测量模型的命中部分的权重
-    z_max: 0.05  # 测量模型中最大距离的权重
-    z_rand: 0.5  # 测量模型的随机部分的权重
-    z_short: 0.05  # 测量模型的短距离命中部分的权重
-    scan_topic: scan  # 激光扫描话题的名称
+# amcl:  # AMCL节点的配置开始
+#   ros__parameters:  # ROS 2参数命名空间
+#     use_sim_time: True  # 使用仿真时间，对于仿真环境设置为True，实际硬件设置为False
+#     alpha1: 0.2  # 旋转运动的噪声参数
+#     alpha2: 0.2  # 旋转后的直线运动的噪声参数
+#     alpha3: 0.2  # 直线运动的噪声参数
+#     alpha4: 0.2  # 直线后的旋转运动的噪声参数
+#     alpha5: 0.2  # 传感器噪声参数
+#     base_frame_id: "base_footprint"  # 机器人底盘的参考框架ID
+#     beam_skip_distance: 0.5  # 在进行激光模型计算时跳过的光束距离
+#     beam_skip_error_threshold: 0.9  # 允许的最大光束跳过错误阈值
+#     beam_skip_threshold: 0.3  # 光束跳过阈值
+#     do_beamskip: True  # 是否执行光束跳过优化
+#     global_frame_id: "map"  # 全局参考框架ID
+#     lambda_short: 0.1  # 短距离测量的指数衰减速率
+#     laser_likelihood_max_dist: 2.0  # 激光似然性计算的最大距离
+#     laser_max_range: 40.0  # 激光器的最大测量范围
+#     laser_min_range: -1.0  # 激光器的最小测量范围，-1表示忽略
+#     laser_model_type: "likelihood_field"  # 使用的激光模型类型
+#     max_beams: 60  # 用于每个粒子进行估算的最大光束数
+#     max_particles: 2000  # 粒子滤波器中的最大粒子数
+#     min_particles: 500  # 粒子滤波器中的最小粒子数
+#     odom_frame_id: "odom"  # 里程计的参考框架ID
+#     pf_err: 0.15  # 粒子滤波器的误差参数
+#     pf_z: 0.99  # 粒子滤波器的测量更新参数
+#     recovery_alpha_fast: 0.0  # 快速收敛率
+#     recovery_alpha_slow: 0.0  # 慢速收敛率
+#     resample_interval: 1  # 重采样间隔，以周期为单位
+#     robot_model_type: "nav2_amcl::DifferentialMotionModel"  # 机器人运动模型类型
+#     save_pose_rate: 1.0  # 保存姿势的频率，单位为Hz
+#     sigma_hit: 0.2  # 测量的标准差
+#     tf_broadcast: false  # 是否广播坐标变换
+#     transform_tolerance: 2.0  # 坐标变换容忍的延迟，单位为秒
+#     update_min_a: 0.1  # 触发更新的最小角度变化
+#     update_min_d: 0.25  # 触发更新的最小距离变化
+#     z_hit: 0.5  # 测量模型的命中部分的权重
+#     z_max: 0.05  # 测量模型中最大距离的权重
+#     z_rand: 0.5  # 测量模型的随机部分的权重
+#     z_short: 0.05  # 测量模型的短距离命中部分的权重
+#     scan_topic: scan  # 激光扫描话题的名称
 
 # bt_navigator:
 #   ros__parameters:
